{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 611,
  "lineage": "850124c6-03bc-7ad2-7413-676dd6ff7d7a",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d14f42fe38dee22",
            "arn": "arn:aws:ec2:eu-west-1:179151669003:elastic-ip/eipalloc-03d14f42fe38dee22",
            "domain": "vpc",
            "id": "eipalloc-03d14f42fe38dee22",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-229-45-82.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.229.45.82",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1",
            "tags": {
              "Environment": "full",
              "Name": "lab44-nat_eip-a",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-nat_eip-a",
              "Project": "lab44"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0234f2d29c2df5690",
            "arn": "arn:aws:ec2:eu-west-1:179151669003:elastic-ip/eipalloc-0234f2d29c2df5690",
            "domain": "vpc",
            "id": "eipalloc-0234f2d29c2df5690",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-34-252-192-73.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.252.192.73",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1",
            "tags": {
              "Environment": "full",
              "Name": "lab44-nat_eip-b",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-nat_eip-b",
              "Project": "lab44"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03446a3af42c5e74e",
            "arn": "arn:aws:ec2:eu-west-1:179151669003:instance/i-069feaafa45e605a4",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "lab44-ec2-ssm-instance-profile",
            "id": "i-069feaafa45e605a4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06b833575a411b2be"
              }
            ],
            "primary_network_interface_id": "eni-06b833575a411b2be",
            "private_dns": "ip-10-30-11-179.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.11.179",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "full",
                  "Project": "lab44"
                },
                "tags_all": {
                  "Environment": "full",
                  "Project": "lab44"
                },
                "throughput": 125,
                "volume_id": "vol-032bd340f352f9073",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e47226efc400ed8",
            "tags": {
              "Environment": "full",
              "Name": "lab44-web",
              "Project": "lab44",
              "Role": "web"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-web",
              "Project": "lab44",
              "Role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0c71e989e8db777bf"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "i-069feaafa45e605a4",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_iam_instance_profile.ec2_ssm_instance_profile",
            "module.network.aws_iam_role.ec2_ssm_role",
            "module.network.aws_security_group.web",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_ami.ubuntu",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:internet-gateway/igw-04260ffe64ffafb0c",
            "id": "igw-04260ffe64ffafb0c",
            "owner_id": "179151669003",
            "region": "eu-west-1",
            "tags": {
              "Environment": "full",
              "Name": "lab44-igw",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-igw",
              "Project": "lab44"
            },
            "vpc_id": "vpc-0d0ca0e5c7e0bbffc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d14f42fe38dee22",
            "association_id": "eipassoc-0b96480b440d3c240",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-015700356e0483359",
            "network_interface_id": "eni-027cb7b3295cfeba2",
            "private_ip": "10.30.1.155",
            "public_ip": "54.229.45.82",
            "region": "eu-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-039678259f41f8e49",
            "tags": {
              "Environment": "full",
              "Name": "lab44-nat_gw-a",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-nat_gw-a",
              "Project": "lab44"
            },
            "vpc_id": "vpc-0d0ca0e5c7e0bbffc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_subnet_assoc",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0234f2d29c2df5690",
            "association_id": "eipassoc-0ae329758f912e2c0",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-055684cd7ce10a665",
            "network_interface_id": "eni-0ca44f5c956810d9e",
            "private_ip": "10.30.2.174",
            "public_ip": "34.252.192.73",
            "region": "eu-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0df844728575d22d2",
            "tags": {
              "Environment": "full",
              "Name": "lab44-nat_gw-b",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-nat_gw-b",
              "Project": "lab44"
            },
            "vpc_id": "vpc-0d0ca0e5c7e0bbffc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_subnet_assoc",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:route-table/rtb-0d18e6ae4d0d96f5d",
            "id": "rtb-0d18e6ae4d0d96f5d",
            "owner_id": "179151669003",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-015700356e0483359",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "full",
              "Name": "lab44-private_rt-a",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-private_rt-a",
              "Project": "lab44"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0ca0e5c7e0bbffc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "rtb-0d18e6ae4d0d96f5d",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_subnet_assoc",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:route-table/rtb-0e1a16ad853be4a5d",
            "id": "rtb-0e1a16ad853be4a5d",
            "owner_id": "179151669003",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-055684cd7ce10a665",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "full",
              "Name": "lab44-private_rt-b",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-private_rt-b",
              "Project": "lab44"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0ca0e5c7e0bbffc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "rtb-0e1a16ad853be4a5d",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_subnet_assoc",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:route-table/rtb-0d681d14bd33f380c",
            "id": "rtb-0d681d14bd33f380c",
            "owner_id": "179151669003",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04260ffe64ffafb0c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "full",
              "Name": "lab44-public_rt",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-public_rt",
              "Project": "lab44"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0ca0e5c7e0bbffc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "rtb-0d681d14bd33f380c",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07125681086218bf2",
            "region": "eu-west-1",
            "route_table_id": "rtb-0d18e6ae4d0d96f5d",
            "subnet_id": "subnet-01e47226efc400ed8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private_rt",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_subnet_assoc",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031cfac304826d33d",
            "region": "eu-west-1",
            "route_table_id": "rtb-0e1a16ad853be4a5d",
            "subnet_id": "subnet-05ce0e4ddf09ae9a5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private_rt",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_subnet_assoc",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c5fdef0ee3f1cf3",
            "region": "eu-west-1",
            "route_table_id": "rtb-0d681d14bd33f380c",
            "subnet_id": "subnet-039678259f41f8e49"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b62ca39c9fe9380f",
            "region": "eu-west-1",
            "route_table_id": "rtb-0d681d14bd33f380c",
            "subnet_id": "subnet-0df844728575d22d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:security-group/sg-067b54142813d1075",
            "description": "Allow DB from Web SG only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067b54142813d1075",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres from Web SG",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c71e989e8db777bf"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "lab44-db_sg",
            "name_prefix": "",
            "owner_id": "179151669003",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "full",
              "Name": "lab44-db_sg",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-db_sg",
              "Project": "lab44"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0ca0e5c7e0bbffc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "sg-067b54142813d1075",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_security_group.web",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:security-group/sg-08f3de7ee8829e363",
            "description": "Allow HTTPS from VPC CIDR to SSM Endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f3de7ee8829e363",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.30.0.0/16"
                ],
                "description": "HTTPS from VPC CIDR",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "lab44-ssm_endpoint_sg",
            "name_prefix": "",
            "owner_id": "179151669003",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "full",
              "Name": "lab44-ssm_endpoint_sg",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-ssm_endpoint_sg",
              "Project": "lab44"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0ca0e5c7e0bbffc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "sg-08f3de7ee8829e363",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:security-group/sg-0c71e989e8db777bf",
            "description": "Web service access only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c71e989e8db777bf",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.30.0.0/16"
                ],
                "description": "HTTP 80 from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.30.0.0/16"
                ],
                "description": "HTTPS 443 from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "lab44-web_sg",
            "name_prefix": "",
            "owner_id": "179151669003",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "full",
              "Name": "lab44-web_sg",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-web_sg",
              "Project": "lab44"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0ca0e5c7e0bbffc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "sg-0c71e989e8db777bf",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:subnet/subnet-01e47226efc400ed8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.30.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e47226efc400ed8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "179151669003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "full",
              "Name": "lab44-private_subnet-a",
              "Project": "lab44",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-private_subnet-a",
              "Project": "lab44",
              "Tier": "private"
            },
            "vpc_id": "vpc-0d0ca0e5c7e0bbffc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "subnet-01e47226efc400ed8",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:subnet/subnet-05ce0e4ddf09ae9a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.30.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ce0e4ddf09ae9a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "179151669003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "full",
              "Name": "lab44-private_subnet-b",
              "Project": "lab44",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-private_subnet-b",
              "Project": "lab44",
              "Tier": "private"
            },
            "vpc_id": "vpc-0d0ca0e5c7e0bbffc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "subnet-05ce0e4ddf09ae9a5",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:subnet/subnet-039678259f41f8e49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039678259f41f8e49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "179151669003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "full",
              "Name": "lab44-public_subnet-a",
              "Project": "lab44",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-public_subnet-a",
              "Project": "lab44",
              "Tier": "public"
            },
            "vpc_id": "vpc-0d0ca0e5c7e0bbffc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "subnet-039678259f41f8e49",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:subnet/subnet-0df844728575d22d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df844728575d22d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "179151669003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "full",
              "Name": "lab44-public_subnet-b",
              "Project": "lab44",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-public_subnet-b",
              "Project": "lab44",
              "Tier": "public"
            },
            "vpc_id": "vpc-0d0ca0e5c7e0bbffc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "subnet-0df844728575d22d2",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:vpc/vpc-0d0ca0e5c7e0bbffc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-0c284fa55c55f9a49",
            "default_route_table_id": "rtb-0e36f5bdd65a40b40",
            "default_security_group_id": "sg-08396a8d05f6db0b2",
            "dhcp_options_id": "dopt-0d3e33a46ba198995",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d0ca0e5c7e0bbffc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e36f5bdd65a40b40",
            "owner_id": "179151669003",
            "region": "eu-west-1",
            "tags": {
              "Environment": "full",
              "Name": "lab44-vpc",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-vpc",
              "Project": "lab44"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "vpc-0d0ca0e5c7e0bbffc",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:vpc-endpoint/vpce-09289d7ff7d201824",
            "dns_entry": [
              {
                "dns_name": "vpce-09289d7ff7d201824-3j4ug1st.ec2messages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-09289d7ff7d201824-3j4ug1st-eu-west-1b.ec2messages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-09289d7ff7d201824-3j4ug1st-eu-west-1a.ec2messages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ec2messages.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z07002311MR9MZJNG76N9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09289d7ff7d201824",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-010d8352f5befc6b4",
              "eni-094df74ff9966ce48"
            ],
            "owner_id": "179151669003",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-08f3de7ee8829e363"
            ],
            "service_name": "com.amazonaws.eu-west-1.ec2messages",
            "service_region": "eu-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.11.232",
                "subnet_id": "subnet-01e47226efc400ed8"
              },
              {
                "ipv4": "10.30.12.88",
                "subnet_id": "subnet-05ce0e4ddf09ae9a5"
              }
            ],
            "subnet_ids": [
              "subnet-01e47226efc400ed8",
              "subnet-05ce0e4ddf09ae9a5"
            ],
            "tags": {
              "Environment": "full",
              "Name": "lab44-ssm_vpc_endpoint-ec2messages",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-ssm_vpc_endpoint-ec2messages",
              "Project": "lab44"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d0ca0e5c7e0bbffc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "vpce-09289d7ff7d201824",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_security_group.ssm_endpoint",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:vpc-endpoint/vpce-07e47c422f8015799",
            "dns_entry": [
              {
                "dns_name": "vpce-07e47c422f8015799-9uefac3k.ssm.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-07e47c422f8015799-9uefac3k-eu-west-1a.ssm.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-07e47c422f8015799-9uefac3k-eu-west-1b.ssm.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ssm.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0999299188YBT5GIGZQ4"
              },
              {
                "dns_name": "ssm.eu-west-1.api.aws",
                "hosted_zone_id": "Z01064686PYA0QZCZV46"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07e47c422f8015799",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-036e945097ae0a052",
              "eni-09b96cfbaffe4802c"
            ],
            "owner_id": "179151669003",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-08f3de7ee8829e363"
            ],
            "service_name": "com.amazonaws.eu-west-1.ssm",
            "service_region": "eu-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.11.181",
                "subnet_id": "subnet-01e47226efc400ed8"
              },
              {
                "ipv4": "10.30.12.188",
                "subnet_id": "subnet-05ce0e4ddf09ae9a5"
              }
            ],
            "subnet_ids": [
              "subnet-01e47226efc400ed8",
              "subnet-05ce0e4ddf09ae9a5"
            ],
            "tags": {
              "Environment": "full",
              "Name": "lab44-ssm_vpc_endpoint-ssm",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-ssm_vpc_endpoint-ssm",
              "Project": "lab44"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d0ca0e5c7e0bbffc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "vpce-07e47c422f8015799",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_security_group.ssm_endpoint",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ssmmessages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:vpc-endpoint/vpce-02e81e1de8602edeb",
            "dns_entry": [
              {
                "dns_name": "vpce-02e81e1de8602edeb-maovdbo2.ssmmessages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-02e81e1de8602edeb-maovdbo2-eu-west-1a.ssmmessages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-02e81e1de8602edeb-maovdbo2-eu-west-1b.ssmmessages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ssmmessages.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z07002502D2GMK6G43SBW"
              },
              {
                "dns_name": "ssmmessages.eu-west-1.api.aws",
                "hosted_zone_id": "Z104355839DZ9IYFNLQV4"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02e81e1de8602edeb",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00de9f8d2a42717e4",
              "eni-0a3636c1191666d0b"
            ],
            "owner_id": "179151669003",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-08f3de7ee8829e363"
            ],
            "service_name": "com.amazonaws.eu-west-1.ssmmessages",
            "service_region": "eu-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.11.243",
                "subnet_id": "subnet-01e47226efc400ed8"
              },
              {
                "ipv4": "10.30.12.12",
                "subnet_id": "subnet-05ce0e4ddf09ae9a5"
              }
            ],
            "subnet_ids": [
              "subnet-01e47226efc400ed8",
              "subnet-05ce0e4ddf09ae9a5"
            ],
            "tags": {
              "Environment": "full",
              "Name": "lab44-ssm_vpc_endpoint-ssmmessages",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-ssm_vpc_endpoint-ssmmessages",
              "Project": "lab44"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d0ca0e5c7e0bbffc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "vpce-02e81e1de8602edeb",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_security_group.ssm_endpoint",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}